--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice cream chili peppers</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
     <link rel="manifest" href="./site.webmanifest" />
-    <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#5bbad5" />
+    <link rel="mask-icon" href="./images/favicon/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="apple-mobile-web-app-title" content="IceCream" />
     <meta name="application-name" content="IceCream" />
     <meta name="msapplication-TileColor" content="#da532c" />
@@ -34,6 +34,9 @@
     <!-- Hero header section -->
     <include src="./partials/hero-header.html"></include>
 
+    <!-- Hero header section -->
+    <include src="./partials/mobile-menu.html"></include>
+
     <!-- Products section -->
     <include src="./partials/products.html"></include>
 
@@ -54,6 +57,15 @@
 
     <!-- Footer section -->
     <include src="./partials/footer.html"></include>
+
+    <!-- Buy now modal -->
+    <include src="./partials/buy-now-modal.html"></include>
+
+    <!-- Our location modal -->
+    <include src="./partials/our-location-modal.html"></include>
+
+    <!-- Read more modal -->
+    <include src="./partials/read-more-modal.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
