--- a/src/index.html
+++ b/src/index.html
@@ -69,5 +69,8 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+
+    <!-- Our location modal script -->
+    <script src="./js/our-location-modal.js"></script>
   </body>
 </html>
