--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,11 @@
     <script src="./index.js"></script>
 
     <!-- Our location modal script -->
+
     <script src="./js/our-location-modal.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly&channel=2"
+      async
+    ></script>
   </body>
 </html>
