--- a/src/index.html
+++ b/src/index.html
@@ -115,5 +115,6 @@
         dots[slideIndex - 1].className += ' active';
       }
     </script>
+    <script src="./js/read-more-modal.js" type="module"></script>
   </body>
 </html>
