--- a/src/index.html
+++ b/src/index.html
@@ -116,5 +116,6 @@
       }
     </script>
     <script src="./js/read-more-modal.js" type="module"></script>
+    <script src="./js/mobile-menu.js" type="module"></script>
   </body>
 </html>
