--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,9 @@
     <!-- Read more modal -->
     <include src="./partials/read-more-modal.html"></include>
 
+    <!-- Franchise modal -->
+    <include src="./partials/modal-franchise.html"></include>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
 
@@ -116,5 +119,6 @@
       }
     </script>
     <script src="./js/read-more-modal.js" type="module"></script>
+    <script src="./js/modal-franchise.js" type="module"></script>
   </body>
 </html>
