--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./animations/animate.min.css" />
   </head>
   <body>
     <!-- Hero header section -->
@@ -72,6 +73,8 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+
+    <script src="./js/buy-now-modal.js"></script>
 
     <!-- Our location modal script -->
 
