slider-final-fix

--- a/src/index.html
+++ b/src/index.html
@@ -79,47 +79,7 @@
 
     <script src="./js/our-location-modal.js"></script>
     <script src="./js/customer-review.js" type="module"></script>
-    <script>
-      /* Индекс слайда по умолчанию */
-      let slideIndex = 1;
-      showSlides(slideIndex);
-
-      /* Функция увеличивает индекс на 1, показывает следующй слайд*/
-      function plusSlide() {
-        showSlides((slideIndex += 1));
-      }
-
-      /* Функция уменьшяет индекс на 1, показывает предыдущий слайд*/
-      function minusSlide() {
-        showSlides((slideIndex -= 1));
-      }
-
-      /* Устанавливает текущий слайд */
-      function currentSlide(n) {
-        showSlides((slideIndex = n));
-      }
-
-      /* Основная функция слайдера */
-      function showSlides(n) {
-        let i;
-        let slides = document.getElementsByClassName('review-slider__item');
-        let dots = document.getElementsByClassName('review-slider-dots__item');
-        if (n > slides.length) {
-          slideIndex = 1;
-        }
-        if (n < 1) {
-          slideIndex = slides.length;
-        }
-        for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = 'none';
-        }
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(' active', '');
-        }
-        slides[slideIndex - 1].style.display = 'block';
-        dots[slideIndex - 1].className += ' active';
-      }
-    </script>
+    <script src="./js/slider.js"></script>
     <script src="./js/read-more-modal.js" type="module"></script>
     <script src="./js/mobile-menu.js" type="module"></script>
     <script src="./js/products__button-animation.js" type="module"></script>
