--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,9 @@
     <!-- Franchise modal -->
     <include src="./partials/modal-franchise.html"></include>
 
+    <!-- Scrollup btn -->
+    <include src="./partials/scrollup.html"></include>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
 
@@ -84,5 +87,6 @@
     <script src="./js/mobile-menu.js" type="module"></script>
     <script src="./js/products__button-animation.js" type="module"></script>
     <script src="./js/modal-franchise.js" type="module"></script>
+    <script src="./js/scrollup.js"></script>
   </body>
 </html>
